--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -21,8 +21,6 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
                     </nav>
                 </div>
@@ -43,6 +41,7 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Styles.Render("~/Content/bootstrap")
         @RenderSection("scripts", required: false)
     </body>
 </html>
