Basic shoutbox with history. #2

--- a/LiveChat/LiveChat.App/Views/Account/Login.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.LoginModel
+﻿@model LiveChat.Domain.Models.EntityClasses.LoginModel
 
 @{
     ViewBag.Title = "Log in";
