--- a/LiveChat/LiveChat.App/Views/Account/Register.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.RegisterModel
+﻿@model LiveChat.Domain.Models.EntityClasses.RegisterModel
 @{
     ViewBag.Title = "Register";
 }
