--- a/LiveChat/LiveChat.App/Views/Account/_ChangePasswordPartial.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.LocalPasswordModel
+﻿@model LiveChat.Domain.Models.EntityClasses.LocalPasswordModel
 
 <h3>Change password</h3>
 
