--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Shoutbox", "Shoutbox", "Chat")</li>
                         </ul>
                     </nav>
                 </div>
