Basic Admin Panel. #4

--- a/LiveChat/LiveChat.App/Views/Chat/Shoutbox.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/Shoutbox.cshtml
@@ -8,12 +8,14 @@
     <h2>Shoutbox - send your message to all users</h2>
     <div class="input-group">
         <input id="message-shoutbox" class="form-control" type="text" placeholder="Type your message here..."/>
-        <span id="send-shoutbox" class="btn btn-primary input-group-addon">Send</span>
+        <span class="input-group-btn">
+            <button id="send-shoutbox" class="btn btn-primary">Send <span class="glyphicon glyphicon-send"></span></button>
+        </span>
     </div>
-    <ul id="discussion-shoutbox" class="list-unstyled">
+    <ul id="discussion-shoutbox" class="list-unstyled list-group discussion">
         @foreach (var message in Model)
         {
-            <li>@message.Content</li>
+            <li class="list-group-item-text">@message.Content</li>
         }
     </ul>
 </div>
@@ -27,7 +29,7 @@
             var shoutbox = $.connection.shoutboxHub;
 
             shoutbox.client.addNewShoutboxMessage = function(message) {
-                $('#discussion-shoutbox').append('<li>' + message + '</li');
+                $('#discussion-shoutbox').append('<li class="list-group-item-text">' + message + '</li');
             };
 
             $('#message-shoutbox').focus();
