--- a/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
@@ -11,7 +11,7 @@
 
 <p>You're logged in as <strong>@User.Identity.Name</strong>.</p>
 
-@Html.Partial("_ChangePasswordPartial")
+@Html.Partial("_ChangePassword")
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
