--- a/LiveChat/LiveChat.App/Content/LiveChat.css
+++ b/LiveChat/LiveChat.App/Content/LiveChat.css
@@ -2,3 +2,13 @@
     margin: 2em auto;
     padding: 0 1em;
 }
+
+    .add-user-panel .list-group-item-heading {
+        font-size: 18px;
+        font-style: italic;
+        color: rgb(133, 133, 133);
+    }
+
+    .add-user-panel .btn{
+        width: 50px;
+    }
