--- a/LiveChat/LiveChat.App/Views/Account/ManageAccounts.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/ManageAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LiveChat.Domain.Models.EntityClasses.User>
+﻿@model LiveChat.Domain.Models.EntityExtensions.ManageAccountsViewModel
 
 @{
     ViewBag.Title = "Manage Users Account";
@@ -6,15 +6,19 @@
 <h2>Accounts Manager</h2>
 <div class="col-lg-5">
     <ul class="list-group">
-    @foreach (var user in @Model)
-    {
-        <li id="@user.UserName-roles" class="list-group-item">
-            <span class="badge">@user.UserRolesCount</span>
-            <h4 class="list-group-item-heading" onclick="getUserRoles('#@user.UserName-roles .role-list', @user.UserId)">@user.UserName</h4>
-            <div class="role-list"></div>
-        </li>
-    }
+        @foreach (var user in @Model.Users)
+        {
+            <li id="@user.UserName-roles" class="list-group-item">
+                <span class="badge">@user.UserRolesCount</span>
+                <h4 class="list-group-item-heading" onclick="getUserRoles('#@user.UserName-roles .role-list', @user.UserId)">@user.UserName</h4>
+
+                <div class="role-list"></div>
+            </li>
+        }
     </ul>
+    
+    @Html.Partial("_RegisterNewUser")
+    
 </div>
 @section scripts{
     <script>
