--- a/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityClasses.LocalPasswordModel
+﻿@model LiveChat.Domain.Models.EntityExtensions.UserViewModel
 @{
     ViewBag.Title = "Manage Account";
 }
