--- a/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
@@ -1,5 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityClasses.LocalPasswordModel
-
+﻿@model LiveChat.Domain.Models.EntityExtensions.UserViewModel
 <h3>Change password</h3>
 
 @using (Html.BeginForm("Manage", "Account")) {
