--- a/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
@@ -1,7 +1,9 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.UserViewModel
+﻿@model LiveChat.Domain.Models.EntityExtensions.EditUserViewModel
 <h3>Change password</h3>
 
-@using (Html.BeginForm("Manage", "Account")) {
+@using (Html.BeginForm("Manage", "Account")) 
+{
+    @Html.HiddenFor(x=>x.UserId)
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
@@ -10,15 +12,15 @@
         <ol>
             <li>
                 @Html.LabelFor(m => m.OldPassword)
-                @Html.PasswordFor(m => m.OldPassword)
+                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
             </li>
             <li>
                 @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)
+                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
             </li>
             <li>
                 @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             </li>
         </ol>
         <input type="submit" value="Change password" />
