--- a/LiveChat/LiveChat.App/Views/Account/EditUser.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/EditUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LiveChat.Domain.Models.EntityExtensions
-@model LiveChat.Domain.Models.EntityExtensions.UserViewModel
+@model LiveChat.Domain.Models.EntityExtensions.EditUserAdminViewModel
 
 @{
     ViewBag.Title = "Edit user - " + @Model.UserName;
@@ -8,6 +8,10 @@
 <div class="edit-user-panel panel panel-primary">
     <div class="panel-heading">
         <span class="glyphicon glyphicon-wrench"></span> Edit user - @Model.UserName
+        @if (!string.IsNullOrEmpty(Model.Nickname))
+        {
+            <span>(@Model.Nickname)</span>
+        }
     </div>
 
     <div id="user-data" class="panel-body">
@@ -21,6 +25,10 @@
                     <li>
                         @Html.LabelFor(m => m.Nickname)
                         @Html.TextBoxFor(m => m.Nickname, new { @class = "form-control" })
+                    </li>
+                    <li>
+                        @Html.LabelFor(m => m.OldPassword)
+                        @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
                     </li>
                     <li>
                         @Html.LabelFor(m => m.NewPassword)
@@ -62,9 +70,7 @@
 <div id="role-url-container" style="display: none;" 
      data-url-removeuser='@Url.Action("RemoveUser")'
      data-url-adduserrole='@Url.Action("AddUserRole")'
-     data-url-getuserroles='@Url.Action("GetUserRoles")'
      data-url-getuserrolescount='@Url.Action("GetUserRolesCount")'
-     data-url-rolepartialUrl='@Url.Action("RolePartialUrl")'
      data-url-removeuserrole='@Url.Action("RemoveUserRole")'></div>
 @section scripts{
     <script src="~/Scripts/live-chat/roles.js"></script>
