--- a/LiveChat/LiveChat.App/Views/Account/Register.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Register.cshtml
@@ -18,15 +18,19 @@
         <ol>
             <li>
                 @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+            </li>
+            <li>
+                @Html.LabelFor(m => m.Nickname)
+                @Html.TextBoxFor(m => m.Nickname, new { @class = "form-control" })
             </li>
             <li>
                 @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             </li>
             <li>
                 @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             </li>
         </ol>
         <button type="submit" class="btn btn-success">Register</button>
