Basic private chat #7

--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("Shoutbox", "Shoutbox", "Chat")</li>
+                            <li>@Html.ActionLink("Live Chat", "UsersListChat", "Chat")</li>
                             <li>@Html.ActionLink("ManageAccounts", "ManageAccounts", "Account")</li>
                         </ul>
                     </nav>
