--- a/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
@@ -14,4 +14,38 @@
             <a href="@Url.Action("PrivateChat", new { userId = user.UserId })" class="list-group-item">@user.UserName</a>
         }
     </ul>
+    <button id="send-shoutbox"></button>
 </div>
+
+
+@section scripts
+{
+    <script src="~/Scripts/jquery.signalR-2.1.2.js"></script>
+    <script src="~/signalr/hubs"></script>
+    <script>
+        $(function() {
+            var privateChat = $.connection.privateChatHub;
+
+            privateChat.client.addPrivateMessage = function (message, conversationId) {
+                $('body').append('<h1>' + message + conversationId + '</h1');
+            };
+
+            $.connection.hub.start().done(function () {
+                $('#message-shoutbox').keypress(function (e) {
+                    if (e.keyCode == 13) {
+                        sendMessage();
+                    }
+                });
+
+                $('#send-shoutbox').click(function () {
+                    sendMessage();
+                });
+
+                function sendMessage() {
+                    privateChat.server.send('fkljsdjafsadjklj');
+                    $('#message-shoutbox').val('').focus();
+                }
+            });
+        });
+    </script>
+}
