--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Collections.Specialized
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
