--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/livechat")
         @Styles.Render("~/Content/bootstrap")
         @Styles.Render("~/Content/livechat")
         @RenderSection("scripts", required: false)
