--- a/LiveChat/LiveChat.App/Views/Shared/_LoginPartial.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,11 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
+        Hello, <span class="glyphicon glyphicon-user"></span> @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            <a href="javascript:document.getElementById('logoutForm').submit()">
+                <span class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-off"></span></span>
+            </a>
         }
     </text>
 } else {
