Registration Layout facelifting

--- a/LiveChat/LiveChat.App/Views/Account/EditUser.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/EditUser.cshtml
@@ -1,5 +1,5 @@
-﻿@using LiveChat.Domain.Models.EntityExtensions
-@model LiveChat.Domain.Models.EntityExtensions.EditUserAdminViewModel
+﻿@using LiveChat.Domain.ViewModels
+@model EditUserAdminViewModel
 
 @{
     ViewBag.Title = "Edit user - " + @Model.UserName;
