--- a/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.EditUserViewModel
+﻿@model LiveChat.Domain.ViewModels.EditUserViewModel
 @{
 	ViewBag.Title = "Manage Account";
 }
