--- a/LiveChat/LiveChat.App/Views/Account/ManageAccounts.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/ManageAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.ManageAccountsViewModel
+﻿@model LiveChat.Domain.ViewModels.ManageAccountsViewModel
 
 @{
     ViewBag.Title = "Manage Users Account";
