--- a/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.EditUserViewModel
+﻿@model LiveChat.Domain.ViewModels.EditUserViewModel
 <h3>Change password</h3>
 
 @using (Html.BeginForm("Manage", "Account")) 
