--- a/LiveChat/LiveChat.App/Views/Account/_RegisterNewUser.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_RegisterNewUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.ManageAccountsViewModel
+﻿@model LiveChat.Domain.ViewModels.ManageAccountsViewModel
 
 <div class="panel-heading" style="cursor: pointer;" onclick="$('#new-user-data').toggle('slow')">
     <span class="glyphicon glyphicon-plus"></span> Add new user 
