--- a/LiveChat/LiveChat.App/Views/Account/_RemoveRole.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_RemoveRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.RoleViewModel
+﻿@model LiveChat.Domain.ViewModels.RoleViewModel
 
 <span class="btn btn-xs btn-primary remove-role" title="Remove role @Model.RoleName" 
     data-role-id="@Model.RoleId" data-user-id="@Model.UserId" 
