--- a/LiveChat/LiveChat.App/Views/Chat/PrivateChat.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/PrivateChat.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.PrivateChatViewModel
+﻿@model LiveChat.Domain.ViewModels.PrivateChatViewModel
 
 @{
     ViewBag.Title = "Private Chat";
