--- a/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
+++ b/LiveChat/LiveChat.App/Views/Chat/UsersListChat.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<LiveChat.Domain.Models.EntityExtensions.ChatUserViewModel>
+﻿@model IList<LiveChat.Domain.ViewModels.ChatUserViewModel>
 
 @{
     ViewBag.Title = "Private chat";
