--- a/LiveChat/LiveChat.App/Views/Account/_ChangeNickname.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangeNickname.cshtml
@@ -1,4 +1,4 @@
-﻿@model LiveChat.Domain.Models.EntityExtensions.EditUserViewModel
+﻿@model LiveChat.Domain.ViewModels.EditUserViewModel
 <h3>Change nickname</h3>
 
 @using (Html.BeginForm("ChangeNickname", "Account"))
