--- a/LiveChat/LiveChat.App/Views/Account/_ChangeNickname.cshtml
+++ b/LiveChat/LiveChat.App/Views/Account/_ChangeNickname.cshtml
@@ -12,7 +12,7 @@
         <ol>
             <li>
                 @Html.LabelFor(m => m.Nickname)
-                @Html.EditorFor(m => m.Nickname, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.Nickname, new { @class = "form-control" })
             </li>
         </ol>
         <input type="submit" value="Change nickname" />
