--- a/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
+++ b/LiveChat/LiveChat.App/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Shoutbox", "Chat")</p>
+                    <p class="site-title"><a href="@Url.Action("Shoutbox", "Chat")"><strong>LiveChat</strong> <span class='glyphicon glyphicon-bullhorn'></span></a></p>
                 </div>
                 <div class="float-right">
                     <section id="login">
